# pulumi-koyeb

./: .ci-mgmt.yaml  .golangci.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md
.github/workflows/: build_provider.yml  build_sdk.yml  prerequisites.yml  publish.yml  release.yml  resync-build.yml
docs/: _index.md  installation-configuration.md
examples/: examples_nodejs_test.go  examples_test.go  go.mod
examples/app/: Pulumi.yaml  index.ts  package-lock.json  package.json
examples/basic-py/: __main__.py  requirements.txt
examples/basic-ts/: index.ts  package.json
examples/domain/: Pulumi.yaml  index.ts  package-lock.json  package.json
examples/secret/: Pulumi.yaml  index.ts  package-lock.json  package.json
examples/service/: Pulumi.yaml  index.ts  package-lock.json  package.json
provider/: go.mod  go.sum  resources.go
sdk/: go.mod  go.sum
sdk/dotnet/: App.cs  Domain.cs  GetApp.cs  GetDomain.cs  GetSecret.cs  GetService.cs  KoyebApp.cs  KoyebDomain.cs  KoyebSecret.cs  KoyebService.cs  Provider.cs  Pulumi.Koyeb.csproj  README.md  Secret.cs  Service.cs  Utilities.cs  Volume.cs  pulumi-plugin.json
sdk/nodejs/: README.md  app.ts  domain.ts  getApp.ts  getDomain.ts  getSecret.ts  getService.ts  (+12 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_koyeb/: README.md  __init__.py  _inputs.py  _utilities.py  app.py  domain.py  get_app.py  get_domain.py  get_secret.py  get_service.py  koyeb_app.py  koyeb_domain.py  koyeb_secret.py  koyeb_service.py  outputs.py  provider.py  pulumi-plugin.json  secret.py  service.py  volume.py
(+172 files in other folders)
